turn off branding

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ EMAIL=
 ADMIN_EMAIL=
 EMAIL_VERIFICATION=optional
 
+# Repo Branding
+SMARKETMAN_LINK=True
+
 # ROBOFLOW AI Video
 '''
 ROBOFLOW_API_KEY=
