--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,4 @@ line-length = 79 #PEP8 recommended
 
 [tool.djlint]
 profile = "django"
-ignore = "H021,H020,H031,H016,H030"
-
+ignore = "H021,H020,H031,H016,H030,H006"
