fix multiline comments

--- a/.env.example
+++ b/.env.example
@@ -8,16 +8,16 @@ VIRTUAL_DOMAINS_1=localhost:8000
 #VIRTUAL_GOOGLE_ANALYTICS_1=G-TEST
 #VIRTUAL_GOOGLE_ANALYTICS_API_SECRET_1=xxx
 
-'''
-X is 1,2,3 etc
+# -------------------------------------------
+# X is 1,2,3 etc
 
-VIRTUAL_APPS_X=XXXXX.urls
-VIRTUAL_DOMAINS_X=website.com
-VIRTUAL_GOOGLE_ANALYTICS_X=G-TEST
-VIRTUAL_GOOGLE_ANALYTICS_API_SECRET_X=xxx
+#VIRTUAL_APPS_X=XXXXX.urls
+#VIRTUAL_DOMAINS_X=website.com
+#VIRTUAL_GOOGLE_ANALYTICS_X=G-TEST
+#VIRTUAL_GOOGLE_ANALYTICS_API_SECRET_X=xxx
 
 # Then increase NUMBER_OF_DOMAINS by + 1
-'''
+# -------------------------------------------
 
 # Update with the total number of VIRTUAL_DOMAINS
 NUMBER_OF_DOMAINS=1
@@ -34,61 +34,47 @@ EMAIL_VERIFICATION=optional
 SMARKETMAN_LINK=True
 
 # ROBOFLOW AI Video
-'''
-ROBOFLOW_API_KEY=
-'''
+#ROBOFLOW_API_KEY=
 
 # Flux AI Image
-'''
-FAL_KEY=
-'''
+#FAL_KEY=
 
-'''
-SENDGRID_API_KEY=
-'''
+#SENDGRID_API_KEY=
 
 #TWILIO
-'''
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-'''
+#TWILIO_ACCOUNT_SID=
+#TWILIO_AUTH_TOKEN=
 
 #AWS
-'''
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-'''
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
 
 #CAPTCHA
-'''
-CAPTCHA_SITE_KEY=
-CAPTCHA_PROJECT=
-GOOGLE_APP_PROJECT_ID=
-GOOGLE_APP_PRIVATE_KEY_ID=
-GOOGLE_APP_PRIVATE_KEY=
-GOOGLE_APP_CLIENT_EMAIL=
-GOOGLE_APP_CLIENT_ID=
-GOOGLE_APP_CERT_URL=
-'''
+#CAPTCHA_SITE_KEY=
+#CAPTCHA_PROJECT=
+#GOOGLE_APP_PROJECT_ID=
+#GOOGLE_APP_PRIVATE_KEY_ID=
+#GOOGLE_APP_PRIVATE_KEY=
+#GOOGLE_APP_CLIENT_EMAIL=
+#GOOGLE_APP_CLIENT_ID=
+#GOOGLE_APP_CERT_URL=
 
 #SLACK
-'''
-SLACK_BOT_TOKEN=
-SLACK_CLIENT_ID=
-SLACK_CLIENT_SECRET=
-SLACK_VERIFICATION_TOKEN=
-SLACK_SCOPES=
-SLACK_SIGNING_SECRET=
+#SLACK_BOT_TOKEN=
+#SLACK_CLIENT_ID=
+#SLACK_CLIENT_SECRET=
+#SLACK_VERIFICATION_TOKEN=
+#SLACK_SCOPES=
+#SLACK_SIGNING_SECRET=
 # Example slack channels
-SLACK_EXCEPTIONS=
-SLACK_GENERAL=
-'''
+#SLACK_EXCEPTIONS=
+#SLACK_GENERAL=
+
 
 #STRIPE
-'''
-STRIPE_LIVE_PUBLIC_KEY=
-STRIPE_LIVE_SECRET_KEY=
+#STRIPE_LIVE_PUBLIC_KEY=
+#STRIPE_LIVE_SECRET_KEY=
 
-STRIPE_TEST_PUBLIC_KEY=
-STRIPE_TEST_SECRET_KEY=
-'''
+#STRIPE_TEST_PUBLIC_KEY=
+#STRIPE_TEST_SECRET_KEY=
+
