fix captcha key

--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ SMARKETMAN_LINK=True
 #CAPTCHA_PROJECT=
 #GOOGLE_APP_PROJECT_ID=
 #GOOGLE_APP_PRIVATE_KEY_ID=
-# in GOOGLE_APP_PRIVATE_KEY, replace all \n with \\n
+# in GOOGLE_APP_PRIVATE_KEY, replace all \n with <newline> (it will swap back later)
 #GOOGLE_APP_PRIVATE_KEY=
 #GOOGLE_APP_CLIENT_EMAIL=
 #GOOGLE_APP_CLIENT_ID=
