make heroku production clear

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 
+# On production DJANGO_SETTINGS_MODULE=main.settings.heroku
 DJANGO_SETTINGS_MODULE=main.settings.localhost
 DJANGO_SECRET_KEY=randomstringoflettershere_RDRE3XW!4
 
