--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ LOCAL_DEV=True
 EMAIL=
 ADMIN_EMAIL=
 EMAIL_VERIFICATION=optional
+EMAIL_BACKEND=anymail.backends.sendgrid.EmailBackend
 
 # Repo Branding
 SMARKETMAN_LINK=True
